# what-do

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.yaml
data/: dislikes.example.txt  likes.example.txt  seeds.yaml
docs/: decisions.md  high-level-design.md  implementation-plan.md  requirements.md
src/: config.py
src/enrichment/: astronomical.py  movies.py  service.py  synthetic.py  weather.py
src/ingestion/: disambiguation.py  failover.py  geocoder.py  handle_extractor.py  ingestion_service.py  seeds.py  source.py  venue_discovery.py  venue_source.py
src/ingestion/movies/: amc.py  cinema_veezi.py
src/ingestion/social/: apify.py  dumpor.py  picuki.py
src/models/: event.py  event_candidate.py  venue.py
src/normalization/: deduplicator.py  normalizer.py  service.py
src/presentation/: cli.py
src/storage/: __init__.py  db.py
src/utils/: logging.py  vectors.py
tests/integration/: test_smoke.py
tests/unit/: test_config.py
tests/unit/enrichment/: test_astronomical.py  test_movies.py  test_service.py  test_synthetic.py  test_weather.py
tests/unit/ingestion/: test_disambiguation.py  test_event_candidate.py  test_failover.py  test_handle_extractor.py  test_ingestion_service.py  test_venue_discovery.py
tests/unit/ingestion/movies/: test_amc.py  test_cinema_veezi.py
tests/unit/models/: test_event.py
tests/unit/normalization/: test_deduplicator.py  test_normalization_service.py  test_normalizer.py
tests/unit/storage/: test_db.py
tests/unit/utils/: test_logging.py  test_vectors.py
(+3 files in other folders)
