[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "what-do"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "timezonefinder>=6.0",
    "requests>=2.31",
    "thefuzz>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
what-do = "src.presentation.cli:main"
what-do-run-batch = "src.scheduler:run"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
